--- a/LinkedIn_wordcloud.ipynb
+++ b/LinkedIn_wordcloud.ipynb
@@ -13,38 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2df33aca",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: selenium in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (3.141.0)\n",
-      "Requirement already satisfied: urllib3 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from selenium) (1.26.8)\n",
-      "Requirement already satisfied: bs4 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (0.0.1)\n",
-      "Requirement already satisfied: beautifulsoup4 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from bs4) (4.10.0)\n",
-      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from beautifulsoup4->bs4) (2.3.1)\n",
-      "Requirement already satisfied: pandas in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (1.4.1)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from pandas) (1.22.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from pandas) (2021.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
-      "Requirement already satisfied: wordcloud in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (1.8.1)\n",
-      "Requirement already satisfied: pillow in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from wordcloud) (9.0.1)\n",
-      "Requirement already satisfied: matplotlib in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from wordcloud) (3.5.1)\n",
-      "Requirement already satisfied: numpy>=1.6.1 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from wordcloud) (1.22.2)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from matplotlib->wordcloud) (3.0.4)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from matplotlib->wordcloud) (0.11.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from matplotlib->wordcloud) (2.8.2)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from matplotlib->wordcloud) (1.3.2)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from matplotlib->wordcloud) (21.3)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from matplotlib->wordcloud) (4.29.1)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\user\\anaconda3\\envs\\wordcloud\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->wordcloud) (1.16.0)\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "# Install required packages\n",
     "!pip install selenium\n",
@@ -103,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "798ded16",
+   "id": "3210ece9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fd0a90dd",
+   "id": "f362bfcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1708ea83",
+   "id": "b875bb64",
    "metadata": {},
    "source": [
     "### 2. Collect and Parse the data"
@@ -153,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ecfa990d",
+   "id": "bd7a1977",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "34baf22d",
+   "id": "d6863fbd",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "069db69a",
+   "id": "aa0cd112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "86cb7b9b",
+   "id": "1983a33d",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c1ad8cfb",
+   "id": "647c2a59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "42655ae3",
+   "id": "ca916358",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02ba475f",
+   "id": "771c9241",
    "metadata": {},
    "source": [
     "### 3. Plotting the Graph"
@@ -414,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "45524871",
+   "id": "018469f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "1bacc354",
+   "id": "fc0c0f38",
    "metadata": {},
    "outputs": [
     {
